[package]
name = "treetest"
version = "0.1.0"
edition = "2024"
authors = ["mei happs <mail@meihapps.gay>"]
description = "one cli for all the test frameworks"
license = "MIT"
repository = "https://github.com/meihapps/treetest"
homepage = "https://github.com/meihapps/treetest"
readme = "README.md"
keywords = ["testing", "cli", "multi-framework", "automation"]
categories = ["development-tools"]

[[bin]]
name = "treetest"
path = "src/main.rs"

[dependencies]
clap = {version = "4.5.54", features = ["derive"]}
reqwest = {version = "0.13.1", features = ["blocking"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
which = "8.0.0"
